Added: To currency column and select feature

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <input type="number" class="enter-input-from" />
         </div>
         <div class="to-container">
-            <div class="to-input-field"><div class="selected-abbr"></div><div class="selected-curr"></div><i class="fas fa-caret-down to-toggle"</i></i></div>
+            <div class="to-input-field"><div class="to-selected-abbr"></div><div class="to-selected-curr"></div><i class="fas fa-caret-down to-toggle"</i></i></div>
             <div class="to-scroll">
             </div>
             <input type="number" class="enter-input-to" />
