--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           <div class="from-input-field"><div class="selected-abbr"></div><div class="selected-curr"></div><i class="fas fa-caret-down from-toggle"</i></i></div>
           <div class="from-scroll">
           </div>
-          <input type="number" class="enter-input-from" />
+          <input type="number" class="enter-input-from"  value="0"/>
         </div>
         <div class="to-container">
             <div class="to-input-field"><div class="to-selected-abbr"></div><div class="to-selected-curr"></div><i class="fas fa-caret-down to-toggle"</i></i></div>
             <div class="to-scroll">
             </div>
-            <input type="number" class="enter-input-to" />
+            <input type="number" class="enter-input-to" value="0" />
         </div>
       </div>
     </div>
