Added clear button for search bar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <div class="from-container">
           <label for="from-input-field">From</label>
           <div class="from-input-field"><div class="selected-abbr"></div><div class="selected-curr"></div><i class="fas fa-caret-down from-toggle"</i></i></div>
-          <div class="from-scroll-search"><i class="fas fa-search"></i><input placeholder='Search Countries' class='search-from'   type="text"></div>
+          <div class="from-scroll-search">
+            <i class="fas fa-search"></i>
+            <input placeholder='Search Countries' class='search-from'   type="text">
+            <i class="fas fa-times clear-from-search"></i></div>
           <div class="from-scroll">
           </div>
           <input type="number" class="enter-input-from"  value="0"/>
@@ -40,7 +43,10 @@
         <div class="to-container">
           <label for="to-input-field">To</label>
             <div class="to-input-field"><div class="to-selected-abbr"></div><div class="to-selected-curr"></div><i class="fas fa-caret-down to-toggle"</i></i></div>
-            <div class="to-scroll-search"><i class="fas fa-search"></i><input placeholder='Search Countries' class='search-to'   type="text"></div>
+            <div class="to-scroll-search">
+              <i class="fas fa-search"></i>
+              <input placeholder='Search Countries' class='search-to'   type="text">
+              <i class="fas fa-times clear-to-search"></i></div>
             <div class="to-scroll">
             </div>
             <input type="number" class="enter-input-to" value="0" />
