--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="fontawesome-free-5.13.1-web/css/all.min.css">
     <link rel="stylesheet" href="./style.css" />
+
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -54,7 +55,9 @@
       </div>
     </div>
 
-
+    <script type = "text/javascript" 
+    src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+ </script>
     <script src="App.js" async defer></script>
   </body>
 </html>
